# ecommerce_back

./: Dockerfile.prod  main.py  pyproject.toml
connection/: database.py
controllers/: cart_controller.py  category_controller.py  health_controller.py  order_controller.py  product_controller.py  role_controller.py  subcategory_controller.py  user_controller.py
models/: cart_model.py  category_model.py  order_model.py  order_product_model.py  product_model.py  role_model.py  subcategory_model.py  user_model.py
repositories/: cart_repository.py  category_repository.py  order_repository.py  product_repository.py  role_repository.py  subcategory_repository.py  user_repository.py
services/: cart_service.py  category_service.py  order_service.py  product_service.py  role_service.py  subcategory_service.py  user_service.py
utils/: deploy-back-container-lightsail.py  jwt_middleware.py  openapi_schema.py  settings.py
