[tool.poetry]
name = "ppw3"
version = "0.1.0"
description = ""
authors = ["Trinove <trinove.tecnologia@trinove.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.7"
sqlalchemy = "^2.0.36"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
